[package]
name = "poker-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image", "http"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
