[package]
name = "poker-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# ici tu peux ajouter des crates, par exemple rand pour mélanger les cartes
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image", "http"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
