[package]
name = "poker-rust"
version = "0.1.0"
edition = "2021"
default-run = "poker-rust"


[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image", "http"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros"] }
bcrypt = "0.15"
dotenvy = "0.15"
